2007-05-05  Jens Granseuer  <jensgr@gmx.net>

	* at-enable-dialog.glade: fix critical warning

2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* at-properties.desktop.in.in: renamed Bugzilla product.

2007-04-26  George Kraft IV  <gk4@austin.ibm.com>

	Fixes #386413

	* main.c: (AT_STARTUP_DIR, AT_STARTUP_KEY, SR_PREFS_DIR),
	(init_startup_state, at_startup_toggled, at_startup_update_ui,
	(at_startup_changed): depricated the selection and startup
	of hardcoded assistive technologies.

	* main.c: (cb_at_preferences, cb_keyboard_preferences,
	cb_login_preferences): added callbacks to launch preference dialogs.

	* Makefile.am: depricated files at-startup-session.[ch]

	* at-enable-dialog.glade: removed the checkbox selection of
	assistive technologies and added a push button to launch
	the Preferred Applications dialog to setup ATs.

2007-04-08  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Kristof Vansant <de_lupus@pandora.be>
                                                                               
	* at-enable-dialog.glade: don't require gnome glade lib

2007-02-08  Jens Granseuer  <jensgr@gmx.net>

	* main.c: (create_dialog), (main): fix some reference leaks and don't
	segfault if the glade file is not available

2006-08-07  Willie Walker <william.walker@sun.com>

	Fixes #348630

	* at-startup-session.c (at_startup_state_init, at_startup_state_update):
	look for orca binary in path.

	* at-startup-session.h: added new fields to enabled union.

	* main.c (init_startup_state): added information about orca.
	
2006-08-07  Rodrigo Moya <rodrigo@novell.com>

	Fixes #348832

	* at-properties,desktop.in.in: Use correct Bugzilla component.

2006-06-06  Sergey Udaltsov <svu@gnome.org>

	* Makefile.am: added $(GNOMECC_CAPPLETS_LIBS)

2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* at-startup-session.c: Mark at_startup_string_compare() static.

2004-11-09  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: install the .desktop file in
	$(datadir)/applications.
	