@@ -1,5 +1,12 @@
 2007-05-05  Jens Granseuer  <jensgr@gmx.net>
 
+	* at-enable-dialog.glade:
+	* main.c: (create_dialog): set button images via code instead of
+	relying on glade, so they respect the gtk-button-images xsetting
+	(closes bug #362880)
+
+2007-05-05  Jens Granseuer  <jensgr@gmx.net>
+
 	* at-enable-dialog.glade: fix critical warning
 
 2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>
